--- a/Assignment_1_.ipynb
+++ b/Assignment_1_.ipynb
@@ -38,7 +38,7 @@
       ],
       "source": [
         "#@title Default title text\n",
-        "print (\"Twinkle, twinkle, little star,\\n\\tHow I Wonder what you are\")"
+        "print (\"Twinkle, twinkle, little star,\\n\\tHow I Wonder what you are\\n\\t\\tUp above the world so high,\\n\\t\\tLike a diamond in the sky.\\nTwinkle, twinkle, little star,\\n\\tHow I Wonder what you are")"
       ]
     },
     {
